--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>D&D Digital Tool: Dice Roller & Solo Character Sheet</title>
     <meta name="description" content="Manage your Dungeons & Dragons character without paper. A digital dice roller and character sheet app designed for modern sessions, especially for solo players.">
     <meta name="keywords" content="d&d, dungeons and dragons, dnd dice roller, digital character sheet, solo dnd, dnd tool, 5e character sheet">
-    <link rel="canonical" href="https://your-domain.com/index.html"> <!-- Replace with your actual URL -->
+    <!-- TODO: Ganti dengan URL domain Anda yang sebenarnya -->
+    <link rel="canonical" href="https://your-domain.com/index.html"> 
 
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#1f2937">
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon-512x512.png">
+    <!-- Path ikon disesuaikan agar konsisten dengan manifest -->
+    <link rel="apple-touch-icon" href="./icons/icon-512x512.svg">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="DnD Dashboard">
@@ -44,7 +46,7 @@
         // Register Service Worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                // Path diubah menjadi relatif agar sesuai dengan struktur file PWA
+                // Path sudah benar (relatif)
                 navigator.serviceWorker.register('./service-worker.js')
                     .then(registration => {
                         console.log('ServiceWorker registration successful with scope: ', registration.scope);
@@ -189,7 +191,7 @@
             <div class="space-y-4">
                 <!-- Character Details -->
                 <div class="space-y-2 pb-2 border-b border-gray-600">
-                     <h4 class="text-amber-300 font-bold">Character Data</h4>
+                    <h4 class="text-amber-300 font-bold">Character Data</h4>
                     <div>
                         <label for="charNameInput" class="block text-amber-300 mb-1 text-sm">Character Name</label>
                         <input type="text" id="charNameInput" class="w-full px-3 py-2 rounded-lg bg-gray-700 text-amber-100 focus:outline-none focus:ring-2 focus:ring-amber-500">
@@ -202,15 +204,15 @@
                 
                 <!-- App Settings -->
                 <div class="pt-2 pb-2 border-b border-gray-600 space-y-2">
-                     <h4 class="text-amber-300 font-bold">App Settings</h4>
-                     <div class="flex items-center gap-2">
-                         <input type="checkbox" id="autoCopyRollSetting" class="w-4 h-4 accent-amber-500">
-                         <label for="autoCopyRollSetting" class="text-amber-300 text-sm">Auto-copy dice rolls</label>
-                     </div>
-                     <div class="flex items-center gap-2">
-                         <input type="checkbox" id="autoCopyHpSetting" class="w-4 h-4 accent-amber-500">
-                         <label for="autoCopyHpSetting" class="text-amber-300 text-sm">Auto-copy HP on change (for solo play)</label>
-                     </div>
+                    <h4 class="text-amber-300 font-bold">App Settings</h4>
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="autoCopyRollSetting" class="w-4 h-4 accent-amber-500">
+                        <label for="autoCopyRollSetting" class="text-amber-300 text-sm">Auto-copy dice rolls</label>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="autoCopyHpSetting" class="w-4 h-4 accent-amber-500">
+                        <label for="autoCopyHpSetting" class="text-amber-300 text-sm">Auto-copy HP on change (for solo play)</label>
+                    </div>
                 </div>
 
                 <!-- Skill Modifiers -->
@@ -700,4 +702,3 @@
     </script>
 </body>
 </html>
-
