--- a/index.html
+++ b/index.html
@@ -296,10 +296,11 @@
     </div>
     
     <!-- Modals -->
-    <div id="onboardingModal" class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black bg-opacity-70 modal-backdrop hidden">
+    <div id="onboardingModal" class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black bg-opacity-70 modal-backdrop">
         <div class="bg-gray-800 border-2 border-amber-600 rounded-xl shadow-lg p-8 w-full max-w-md text-center modal-content">
             <h2 class="font-cinzel text-3xl font-bold text-amber-200 mb-4">Welcome!</h2>
             <p class="text-amber-300 mb-6">It looks like you're new here. Let's create your first character to begin the adventure!</p>
+            <a href="./how-to.html" class="block text-amber-400 hover:text-amber-300 underline mb-4 transition-colors">Click Here for Instructions</a>
             <button id="createCharacterBtn" class="bg-amber-600 hover:bg-amber-500 text-gray-900 font-bold py-2 px-8 rounded-lg text-lg transition-colors">Create Character</button>
         </div>
     </div>
