--- a/how-to.html
+++ b/how-to.html
@@ -303,15 +303,10 @@ Deck of DM Things (Cole Porter)</textarea>
             });
         });
 
-        // Handle the "Back to App" button click
-        document.getElementById('back-to-app-button').addEventListener('click', function() {
-            // This is a placeholder for navigation logic.
-            // In a full application, this would redirect the user.
-            // For now, it will simply log a message to the console.
-            console.log('Navigating back to the main app...');
-            // You can replace the console.log with window.location.href = 'index.html';
-            // if you are sure the file path is correct in your local environment.
-        });
+       // Handle the "Back to App" button click
+document.getElementById('back-to-app-button').addEventListener('click', function() {
+    window.location.href = 'index.html';
+});
     </script>
 </body>
 </html>
