--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 dom.skillsList.innerHTML = Object.entries(characterData.skills).map(([skill, mod]) => `<div class="flex justify-between"><span class="${characterData.proficiencies.skills.includes(skill) ? 'text-amber-100' : 'text-gray-400'}">${skill}</span><span class="font-bold text-white">${formatModifier(mod)}</span></div>`).join('');
                 
                 // Spells, Currency, Notes
-                dom.spellsList.innerHTML = characterData.spells.length > 0 ? characterData.spells.map(spell => `<div>${spell}</div>`).join('') : '<span class="italic text-gray-400">No spells known</span>';
+                dom.spellsList.innerHTML = characterData.spells.length > 0 ? characterData.spells.map(spell => `<div class="border-b border-gray-700 pb-2 mb-2 last:border-b-0 last:mb-0">${spell}</div>`).join('') : '<span class="italic text-gray-400">No spells known</span>';
                 Object.keys(characterData.coins).forEach(coin => { dom[`main${coin.charAt(0).toUpperCase() + coin.slice(1)}Input`].value = characterData.coins[coin] || 0; });
                 dom.adventureNotes.value = characterData.notes || "";
             };
