--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,18 @@
 
             // --- KICKSTART APP ---
             init();
+            
+             if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/service-worker.js') // Pastikan path ini benar
+                .then(registration => {
+                    console.log('Service Worker berhasil didaftarkan: ', registration);
+                })
+                .catch(error => {
+                    console.log('Pendaftaran Service Worker gagal: ', error);
+                });
+        });
+    }
         })
     </script>
 </body>
