--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,7 @@
 
             // --- KICKSTART APP ---
             init();
+            setupEventListeners();
             
              if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
