--- a/index.html
+++ b/index.html
@@ -484,27 +484,45 @@
         };
         
         const defaultCharacterTemplate = {
-            name: "New Adventurer",
-            level: 1, race: "Human", class: "Fighter", background: "Acolyte", alignment: "Neutral Good",
-            maxHp: 10, armorClass: 10, speed: 30, hitDie: 10,
-            status: 'conscious',
-            deathSaves: { successes: 0, failures: 0 },
-            abilities: { strength: 10, dexterity: 10, constitution: 10, intelligence: 10, wisdom: 10, charisma: 10 },
-            savingThrows: { strength: 0, dexterity: 0, constitution: 0, intelligence: 0, wisdom: 0, charisma: 0 },
-            proficiencies: { savingThrows: [], skills: [] },
-            notes: "Jot down your adventure notes, clues, or inventory here.",
-            skills: {
-                "Acrobatics": 0, "Animal Handling": 0, "Arcana": 0, "Athletics": 0, "Deception": 0, "History": 0, "Insight": 0, "Intimidation": 0,
-                "Investigation": 0, "Medicine": 0, "Nature": 0, "Perception": 0, "Performance": 0, "Persuasion": 0, "Religion": 0, "Sleight of Hand": 0,
-                "Stealth": 0, "Survival": 0
-            },
-            spellsAndSlots: {
-                "0": { spells: [] },
-                "1": { slots: 0, spells: [] },
-                "feature": { spells: [{ name: "Second Wind", description: "Heal 1d10 + Fighter level." }] }
-            },
-            coins: { pp: 0, gp: 0, ep: 0, sp: 0, cp: 0 }
-        };
+    name: "New Rogue", // Generate a fitting character name.
+    level: 1, // Set the character's starting level (e.g., 1 or 3).
+    race: "Lightfoot Halfling", // Generate a character race.
+    class: "Rogue", // Generate a character class.
+    background: "Urchin", // Generate a background that fits the class/race.
+    alignment: "Chaotic Neutral", // Generate a suitable alignment based on the character concept.
+    maxHp: 8, // Calculate max HP based on class, level, and Constitution modifier.
+    armorClass: 13, // Calculate Armor Class based on starting gear and Dexterity modifier.
+    speed: 25, // Set movement speed based on the generated race.
+    hitDie: 8, // Set the hit die type based on the generated class (e.g., 8 for d8, 10 for d10).
+    status: 'conscious', // Set to 'conscious' for a new character.
+    deathSaves: { successes: 0, failures: 0, rolls: [] }, // Leave at default values; this is managed by the app.
+    abilities: {
+        strength: 8, // Generate base ability scores using Standard Array (15,14,13,12,10,8) and apply racial bonuses.
+        dexterity: 15,
+        constitution: 10,
+        intelligence: 12,
+        wisdom: 14,
+        charisma: 13
+    },
+    // DO NOT FILL. This object is calculated automatically by the application.
+    savingThrows: { strength: 0, dexterity: 0, constitution: 0, intelligence: 0, wisdom: 0, charisma: 0 },
+    proficiencies: {
+        savingThrows: ["dexterity", "intelligence"], // List the two saving throw proficiencies from the generated class as an array of strings.
+        skills: ["Stealth", "Sleight of Hand", "Acrobatics", "Investigation"] // List all skill proficiencies from race, class, and background as an array of strings.
+    },
+    notes: "", // This field is for user notes during gameplay. Leave it empty.
+    // DO NOT FILL. This object is calculated automatically by the application.
+    skills: {
+        "Acrobatics": 0, "Animal Handling": 0, "Arcana": 0, "Athletics": 0, "Deception": 0,
+        "History": 0, "Insight": 0, "Intimidation": 0, "Investigation": 0, "Medicine": 0,
+        "Nature": 0, "Perception": 0, "Performance": 0, "Persuasion": 0, "Religion": 0,
+        "Sleight of Hand": 0, "Stealth": 0, "Survival": 0
+    },
+    // Populate with spells and features based on class and level. Use an empty object {} if none.
+    spellsAndSlots: {}, 
+    coins: { pp: 0, gp: 10, ep: 0, sp: 0, cp: 0 } // Set starting coins based on the generated background.
+};
+
 
         const defaultSettings = { autoCopyRoll: true };
 
